--- a/css/theme.css
+++ b/css/theme.css
@@ -15,6 +15,10 @@ body {
     color: #ee4444;
 }
 
+.well {
+    padding: 5px 10px 5px 10px;
+}
+
 .sidebar h1 {
     color: #ee4444;
     font-size: 1.3em;
@@ -40,6 +44,7 @@ body {
 .well h1 {
     color: #ee4444;
     font-size: 1.3em;
+    margin-top: 5px;
 }
 
 .author {
