--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,5 +12,9 @@
 </div>
 
 <div class="sidebar well">
+{% include category-list.html %}
+</div>
+
+<div class="sidebar well">
 {% include links-list.html %}
 </div>
