--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/misterblue.css" rel="stylesheet">
+    {% include analytics.html %}
 </head>
 
 <body>
