--- a/_includes/add-comment.html
+++ b/_includes/add-comment.html
@@ -1,30 +1,30 @@
----
----
 {% assign postID = include.postID %}
 
-<form action="mailto:mb-comment-submit@misterblue.com" method="post" enctype="text/plain">
-    <table>
-        <tr>
-            <td> Submitter: </td>
-            <td> <input type="text" name="mbc-submitter" maxlength="32"> </td>
-        </tr>
-        <tr>
-            <td> Email (optional): </td>
-            <td> input type="text" name="mbc-submitterEmail" maxlength="100"> </td>
-        </tr>
-        <tr>
-            <td> Comment:  </td>
-            <td> <textarea name="mbc-theComment" rows="10" cols="50"> </textarea> </td>
-        </tr>
-        <tr>
-            <td> Human check (what is the sum of 14 and 22): </td>
-            <td> <input type="number" min="0" max="100" value="6" name="mbc-humanTest"> </td>
-        </tr>
-    </table>
-    <input type="hidden" name="mbc-humancheckcode" value="308">
-    <input type="hidden" name="mbc-postID" value="{{ postID }}">
-    <input type="submit" value="Email comment for moderation">
-</form>
+<div class="mb-comment">
+    <form action="mailto:mb-comment-submit@misterblue.com" method="post" enctype="text/plain">
+        <table>
+            <tr>
+                <td> Submitter: </td>
+                <td> <input type="text" name="mbc-submitter" maxlength="32"> </td>
+            </tr>
+            <tr>
+                <td> Email (optional): </td>
+                <td> input type="text" name="mbc-submitterEmail" maxlength="100"> </td>
+            </tr>
+            <tr>
+                <td> Comment:  </td>
+                <td> <textarea name="mbc-theComment" rows="10" cols="50"> </textarea> </td>
+            </tr>
+            <tr>
+                <td> Human check (what is the sum of 14 and 22): </td>
+                <td> <input type="number" min="0" max="100" value="6" name="mbc-humanTest"> </td>
+            </tr>
+        </table>
+        <input type="hidden" name="mbc-humancheckcode" value="67">
+        <input type="hidden" name="mbc-postID" value="{{ postID }}">
+        <input type="submit" value="Email comment for moderation">
+    </form>
 
-Note that this emails the comment for moderation.
-It may be a day or more before the comment appears on the web site.
+    Note that all comments are held for moderation.
+    It may be a day or more before the comment appears on the web site.
+</div>
