--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -1,18 +1,39 @@
-{% assign post = include.thepost %}
+{% assign thepost = include.thepost %}
+{% assign thecontent = include.thecontent %}
+{% assign ownpage = include.ownpage %}
 
 <div class="article">
     <div class="well">
-        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
-        {% if site.commentable == true and post.comments == true and site.disqus != '' %}
-          <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
-        {% endif %}
+        <h1><a href="{{ site.baseurl}}{{ thepost.url }}">{{ thepost.date | date: "%b %-d, %Y" }} - {{ thepost.title }}</a></h1>
         <div class="content">
-            {{ post.content }}
+            {{ thecontent }}
+
+            {% assign commentClass = "" %}
+            {% if ownpage == "yes" %}
+                {% assign commentClass = "" %}
+                {% if thepost.comments %}
+                    <hr>
+                    <h3>Comments:</h3>
+                    {% for comment in thepost.comments %}
+                        <div class="mb-oldcomment" {{ commentClass }} >
+                            <span class="author">{{ comment.author }}</span>
+                            ( <span class="date">{{ comment.date }}</span> ):
+                            {{ comment.content }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+
+                {% if thepost.commentable %}
+                {% endif %}
+            {% else %}
+                {% assign commentClass = 'class="blindtoggle"' %}
+            {% endif %}
+
             <div class="mb-content-footer">
-                {{ post.author.display_name }}, {{ post.date }}
-                {% if post.categories %}
+                {{ thepost.author.display_name }}, {{ thepost.date }}
+                {% if thepost.categories %}
                     {% assign first = "first" %}
-                    {% for cat in post.categories %}
+                    {% for cat in thepost.categories %}
                         {% if site.data.categories.display-categories contains cat %}
                             {% if first == "first" %}
                                 ,
@@ -25,6 +46,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
+
         </div>
     </div>
 </div>
