--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,43 +6,16 @@
             {% include sidebar.html %}
         </div>
         <div class="col-md-9">
-          <div class="article">
-            <div class="well">
-                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%b %-d, %Y" }} - {{ page.title }}</a></h1>
-            {% if site.comments == true and page.comments == true and site.disqus != '' %}
-                <p class="author"><a href="#disqus_thread">Comments</a></p>
-            {% endif %}
-            <div class="post-content">
-            {{ content }}
-            </div>
-            {% if page.comments %}
-                <hr>
-                <h3>Comments:</h3>
-                {% for comment in page.comments %}
-                    <div class="mb-oldcomment">
-                        <span class="author">{{ comment.author }}</span>
-                        ( <span class="date">{{ comment.date }}</span> ):
-                        {{ comment.content }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-            {% if page.commentable %}
-            <div id="disqus_thread">
-                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-            </div>
-            {% endif %}
-            </div>
-          </div>
-          <div class="pagination">
-              {% if page.next %}
-                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url }}" class="next">Newer Post</a>
-              {% endif %}
-              {% if page.previous %}
-                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Older Post</a>
-              {% endif %}
-</div>
+            {% include one-post.html thepost=page thecontent=content ownpage="yes" %}
 
+            <div class="pagination">
+                {% if page.next %}
+                    <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url }}" class="next">Newer Post</a>
+                {% endif %}
+                {% if page.previous %}
+                    <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Older Post</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
