--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -2,11 +2,14 @@
 <ul>
   {% for cat in site.data.categories.display-categories %}
     {% assign catinfo = site.data.categories.categories[cat] %}
-    <li><a href="{{ catinfo.url }}"
-      {% if catinfo.hoverText != "" %}
-        alt="{{ catinfo.hoverText }}"
-      {% endif %}
-      >{{ catinfo.label }}</a>
+    <li>
+      <a href="{{ catinfo.url }}"
+        {% if catinfo.hoverText != "" %}
+          alt="{{ catinfo.hoverText }}"
+        {% endif %}
+        >
+        {{ catinfo.label }}
+      </a>
     </li>
   {% endfor %}
 </ul>
