--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+{% comment %}
+    Display the content in the basic form
+{% endcomment %}
 {% include header.html %}
 
 <div class="container container-left">
