--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,7 @@
+{% comment %}
+    Page that displays one post.
+    Should have comments and everything else for one article of beautyness.
+{% endcomment %}
 {% include header.html %}
 
 <div class="container container-left">
@@ -20,5 +24,4 @@
     </div>
 </div>
 
-{% include disqus-comments.html %}
 {% include footer.html %}
