--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,17 @@
----
-layout: default
----
-<div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-  <article class="post-content">
-    {{ content }}
-  </article>
+{% comment %}
+    A page that contains just the content.
+{% endcomment %}
+{% include header.html %}
+
+<div class="container container-left">
+    <div class="row">
+        <div class="col-md-3 hidden-xs">
+            {% include sidebar.html %}
+        </div>
+        <div class="col-md-9">
+            {{ content }}
+        </div>
+    </div>
 </div>
+
+{% include footer.html %}
