--- a/categories/_template.html.master
+++ b/categories/_template.html.master
@@ -3,6 +3,6 @@ layout: default
 ---
 {%for post in site.posts %}
     {% if post.status == "publish" and post.categories contains "CATEGORYNAME" %}
-        {% include one-post.html thepost=post %}
+        {% include one-post.html thepost=post thecontent=post.content ownpage="no" %}
     {% endif %}
 {% endfor %}
