--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -14,7 +14,7 @@
 <div class="article">
     <div class="well">
         <h1><a href="{{ site.baseurl}}{{ thepost.url }}">{{ thepost.date | date: "%b %-d, %Y" }} - {{ thepost.title }}</a></h1>
-        <div class="content">
+        <div class="post-content">
             {{ thecontent }}
 
             {% assign commentClass = "" %}
@@ -30,12 +30,41 @@
                             {{ comment.content }}
                         </div>
                     {% endfor %}
+                {% else %}
+                    {% if thepost.commentable %}
+                        {% if site.disqus != '' %}
+                            <div id="disqus_thread">
+                                <noscript>Please enable JavaScript to view the
+                                    <a href="http://disqus.com/?ref_noscript">
+                                        comments powered by Disqus.</a>
+                                </noscript>
+                                <a href="http://disqus.com" class="dsq-brlink">
+                                    comments powered by 
+                                    <span class="logo-disqus">Disqus</span>
+                                </a>
+                            </div>
+                        {% elsif site.isso != '' %}
+                            <section id="isso-thread"></section>
+                        {% endif %}
+                    {% endif %}
                 {% endif %}
 
-                {% if thepost.commentable %}
-                {% endif %}
             {% else %}
                 {% assign commentClass = 'class="blindtoggle"' %}
+                {% if site.disqus != '' %}
+                    <p class="author">
+                        <a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread"
+                            data-disqus-identifier="{{ post.url | slugify }}">
+                                Comments
+                        </a>
+                    </p>
+                {% elsif site.isso != '' %}
+                    <p class="author">
+                        <a href="{{ site.baseurl }}{{ post.url }}{{ site.isso_suffix }}#isso-thread">
+                            Comments
+                        </a>
+                    </p>
+                {% endif %}
             {% endif %}
 
             <div class="mb-content-footer">
