Bunch of changes: catagories working. They are all now upper case. Disqus integration added and turned on Updated bootstram.js, bootstrap.css

--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -3,8 +3,8 @@
   {% for cat in site.data.categories.display-categories %}
     {% assign catinfo = site.data.categories.categories[cat] %}
     <li>
-      <a href="{{ catinfo.url }}"
-        {% if catinfo.hoverText != "" %}
+      <a href="{{site.baseurl}}{{ catinfo.url }}"
+        {% if catinfo.hoverText %}
           alt="{{ catinfo.hoverText }}"
         {% endif %}
         >
