--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -3,13 +3,17 @@
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
+        this.page.url = '{{ page.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+     var dsq = document.createElement('script');
+     dsq.type = 'text/javascript';
+     dsq.async = true;
+     dsq.setAttribute('data-timestamp', +new Date());
      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+     (document.head || document.body).appendChild(dsq);
     })();
   </script>
 {% endif %}
