--- a/_includes/disqus-counts.html
+++ b/_includes/disqus-counts.html
@@ -3,6 +3,7 @@
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
+        this.page.url = '{{ page.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
@@ -10,7 +11,7 @@
      var s = document.createElement('script'); s.async = true;
      s.type = 'text/javascript';
      s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-     (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+     (document.head || document.body).appendChild(s);
    }());
  </script>
 {% endif %}
