--- a/categories/_template.html.master
+++ b/categories/_template.html.master
@@ -1,8 +1,13 @@
 ---
 layout: default
 ---
+<h1>Posts with category CATEGORYNAME</h1>
+<ul>
 {%for post in site.posts %}
     {% if post.status == "publish" and post.categories contains "CATEGORYNAME" %}
-        {% include one-post.html thepost=post thecontent=post.content ownpage="no" %}
+        <li>
+            {{ post.date | date: "%b %-d, %Y" }} <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
     {% endif %}
 {% endfor %}
+</ul>
