--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -3,7 +3,7 @@
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
-        this.page.url = '{{ page.url }}';
+        this.page.url = '{{ site.baseurl }}{{ page.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
