--- a/_includes/disqus-counts.html
+++ b/_includes/disqus-counts.html
@@ -3,12 +3,13 @@
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
-        this.page.url = '{{ page.url }}';
+        this.page.url = '{{ site.baseurl ]]{{ page.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
    (function () {
-     var s = document.createElement('script'); s.async = true;
+     var s = document.createElement('script');
+     s.async = true;
      s.type = 'text/javascript';
      s.src = '//' + disqus_shortname + '.disqus.com/count.js';
      (document.head || document.body).appendChild(s);
