Change 'comments:' in  the posts to 'static-comments:' so there can be a 'comments: true' in the post front matter for Disqus.

--- a/_includes/disqus-counts.html
+++ b/_includes/disqus-counts.html
@@ -9,6 +9,7 @@
 
    (function () {
      var s = document.createElement('script');
+     s.id = 'dsq-count-scr';
      s.async = true;
      s.type = 'text/javascript';
      s.src = '//' + disqus_shortname + '.disqus.com/count.js';
