Move inclusion of Disqus scripts out of the footer and into the index and post files. Update _config.yml for production location.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,4 +24,8 @@
     </div>
 </div>
 
+{% if site.disqus != '' %}
+    {% include disqus-comments.html %}
+{% endif %}
+
 {% include footer.html %}
