--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -11,6 +11,8 @@
 {% assign thecontent = include.thecontent %}
 {% assign ownpage = include.ownpage %}
 
+{% assign pageabsurl = thepost.url | prepend:site.baseurl | prepend:site.url %}
+
 {% assign disqusTag = '' %}
 {% if site.disqus != '' %}
     {% assign disqusTag = '#disqus_thread' %}
@@ -18,7 +20,7 @@
 
 <div class="article">
     <div class="well">
-        <h1><a href="{{ site.baseurl }}{{ thepost.url }}{{ disqusTag }}">
+        <h1><a href="{{ pageabsurl }}{{ disqusTag }}">
             {{ thepost.date | date: "%b %-d, %Y" }} - {{ thepost.title }}</a></h1>
         <div class="post-content">
             {{ thecontent }}
@@ -57,14 +59,14 @@
                 {% if thepost.comments %}
                     {% if site.disqus != '' %}
                         <p class="author">
-                            <a href="{{ site.baseurl }}{{ post.url }}{{ disqusTag }}"
+                            <a href="{{ pageabsurl }}{{ disqusTag }}"
                                 data-disqus-identifier="{{ post.url | slugify }}">
                                     Comments
                             </a>
                         </p>
                     {% elsif site.isso != '' %}
                         <p class="author">
-                            <a href="{{ site.baseurl }}{{ post.url }}{{ site.isso_suffix }}#isso-thread">
+                            <a href="{{ pageabsurl }}{{ site.isso_suffix }}#isso-thread">
                                 Comments
                             </a>
                         </p>
