--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,9 +1,10 @@
+{% assign pageabsurl = thepost.url | prepend:site.baseurl | prepend:site.url %}
 {% if site.comments and page.comments and site.disqus != '' %}
   <script type="text/javascript">
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
-        this.page.url = '{{ site.baseurl }}{{ page.url }}';
+        this.page.url = '{{ page.url | prepend:site.baseurl | prepend:site.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
