--- a/_includes/disqus-counts.html
+++ b/_includes/disqus-counts.html
@@ -3,7 +3,7 @@
     var disqus_shortname = '{{ site.disqus }}';
 
     var disqus_config = function () {
-        this.page.url = '{{ site.baseurl ]]{{ page.url }}';
+        this.page.url = '{{ page.url | prepend:site.baseurl | prepend:site.url }}';
         this.page.identifier = '{{ page.url | slugify }}';
     };
 
