Remove the Disqus tag from the post header link so it is not turned into a comment count.

--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -20,7 +20,7 @@
 
 <div class="article">
     <div class="well">
-        <h1><a href="{{ pageabsurl }}{{ disqusTag }}">
+        <h1><a href="{{ pageabsurl }}">
             {{ thepost.date | date: "%b %-d, %Y" }} - {{ thepost.title }}</a></h1>
         <div class="post-content">
             {{ thecontent }}
