Add 'site.baseurl' to image pointer in one post. Another attempt at getting comment counts working on main page.

--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -60,7 +60,7 @@
                     {% if site.disqus != '' %}
                         <p class="author">
                             <a href="{{ pageabsurl }}{{ disqusTag }}"
-                                data-disqus-identifier="{{ post.url | slugify }}">
+                                data-disqus-identifier="{{ thepost.url | slugify }}">
                                     Comments
                             </a>
                         </p>
