Herbal3d: some text and typo updates in index. Add extra style css for herbal3d.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,9 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/misterblue.css" rel="stylesheet">
+    {% if page.style %}
+        <link href="{{ site.baseurl }}/css/{{ page.style }}.css" rel="stylesheet">
+    {% endif %}
     <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
     <script src="{{ site.baseurl }}/js/misterblue.js"></script>
