--- a/css/misterblue.css
+++ b/css/misterblue.css
@@ -1,3 +1,11 @@
+.well {
+    padding: 5px 10px 5px 10px;
+}
+
+.well h1 {
+    margin-top: 5px;
+}
+
 .mb-oldcomment {
     background-color: #e0e0e0;
     margin-left: 15px;
