Shamelessly fetch the jquery and bootstrap scripts with their version numbers in the _include/header.html file.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
     {% if page.style %}
         <link href="{{ site.baseurl }}/css/{{ page.style }}.css" rel="stylesheet">
     {% endif %}
-    <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery-2.2.4.min.js"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <script src="{{ site.baseurl }}/js/misterblue.js"></script>
     {% include analytics.html %}
 </head>
