--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ site.baseurl }}/js/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/js/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/misterblue.css" rel="stylesheet">
     {% if page.style %}
         <link href="{{ site.baseurl }}/css/{{ page.style }}.css" rel="stylesheet">
