Add vlogs to sidebar list. Change order of sidebar blocks.

--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,4 +1,4 @@
-<h1>Links</h1>
+<h1>Blogs, Vlogs, and Sites</h1>
 <ul>
   {% for linkRef in site.data.sidebar-links %}
     <li><a href="{{ linkRef.url }}"
