Add optional comments to layouts of type 'page'. Update programming index to include Basil work. Add note on Javascript and Flatbuffers. The format may still be wrong.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,9 @@
     </div>
 </div>
 
+{% if page.comments && site.disqus != '' %}
+    {% include disqus-comments.html %}
+{% endif %}
+
+
 {% include footer.html %}
