--- a/_includes/disqus-counts.html
+++ b/_includes/disqus-counts.html
@@ -1,4 +1,4 @@
-{% if site.comments and site.disqus != '' %}
+{% if page.comments and site.comments and site.disqus != '' %}
   <script type="text/javascript">
     var disqus_shortname = '{{ site.disqus }}';
 
