--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,8 @@
     </div>
 </div>
 
-{% if page.comments && site.disqus != '' %}
+{% if site.disqus != '' %}
+    {% include disqus-count.html %}
     {% include disqus-comments.html %}
 {% endif %}
 
