Fix small typo which broke the Jekyll build.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@
 </div>
 
 {% if site.disqus != '' %}
-    {% include disqus-count.html %}
+    {% include disqus-counts.html %}
     {% include disqus-comments.html %}
 {% endif %}
 
