Some more tweeking trying to get Disqus comments working.

--- a/_includes/one-post.html
+++ b/_includes/one-post.html
@@ -61,6 +61,9 @@
                         <p class="author">
                             <a href="{{ pageabsurl }}{{ disqusTag }}"
                                 data-disqus-identifier="{{ thepost.url | slugify }}">
+                                <span class="disqus-comment-count"
+                                    data-disqus-identifier="{{ thepost.url | slugify }}">
+                                    </span>
                                     Comments
                             </a>
                         </p>
