--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,6 @@
     </div>
 </div>
 
-{% if site.disqus != '' %}
-    {% include disqus-comments.html %}
-{% endif %}
+{% include comments-script.html thesite=site thepage=page %}
 
 {% include footer.html %}
