--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,28 +23,29 @@
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+        <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
+        <button class="navbar-toggler" type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#mb-navbar-collapse-1"
+                    aria-controls="mb-navbar-collapse-1"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mb-navbar-collapse-1">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% for navTab in site.data.mainNav %}
                     {% if navTab.submenu %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                                    role="button" aria-haspopup="true" aria-expanded="false">
-                                   {{ navTab.label }} 
-                                    <span class="caret"></span>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle"
+                                        role="button"
+                                        data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                {{ navTab.label }} 
                             </a>
                             <ul class="dropdown-menu">
                                 {% for dropTab in navTab.submenu %}
-                                    <li>
+                                    <li class="dropdown-item">
                                         <a href="{{ dropTab.url | prepend: site.baseurl }}">
                                                 {{ dropTab.label }}
                                         </a>
@@ -54,11 +55,11 @@
                         </li>
                     {% else %}
                         {% if navTab.name == page.navigation %}
-                            <li class="active">
+                            <li class="nav-item" aria-current="page">
                         {% else %}
-                            <li>
+                            <li class="nav-item">
                         {% endif %}
-                        <a href="{{ navTab.url | prepend: site.baseurl }}">{{ navTab.label }}</a>
+                        <a href="{{ navTab.url | prepend: site.baseurl }}" class="nav-link">{{ navTab.label }}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
