--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-expand-lg bg-body-tertiary" role="navigation">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
         <button class="navbar-toggler" type="button" 
