--- a/css/misterblue.css
+++ b/css/misterblue.css
@@ -7,6 +7,7 @@
     --mb-sidebar-a-hover: #3071a9;
     --mb-well-bg: #242279;
     --mb-well-color: var(--mb-base-color);
+    --mb-well-h1-bg: #1d146f;
     --mb-well-h1-color: #ee4444;
     --mb-author-color: #ee4444;
     --mb-comment-bg: #e0e0e0;
@@ -55,6 +56,7 @@ body {
 .well h1 {
     color: var(--mb-well-h1-color);
     margin-top: 5px;
+    font-size: .8em;
 }
 
 .author {
