--- a/css/misterblue.css
+++ b/css/misterblue.css
@@ -18,13 +18,12 @@
 }
 
 body {
-    background-color: var(--mb-base-bg);
     color: var(--mb-base-color);
+    background: var(--mb-base-bg);
 }
 
 .navbar {
-    color: var(--mb-nav-color);
-    background: var(--mb-nav-bg);
+    background-color: var(--mb-nav-bg);
 }
 
 .navbar-brand {
@@ -50,7 +49,7 @@ body {
     padding: 5px 10px 5px 10px;
     background: var(--mb-well-bg);
     color: var(--mb-well-color);
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .well h1 {
@@ -59,6 +58,7 @@ body {
     margin-top: 5px;
     font-size: 1em;
     font-weight: bold;
+    border-radius: 7px;
 }
 
 /* SIDEBAR ================================== */
